испралвения по ручкам auth, также поправил по ним swagger
