# src/routers/auth-router.ts
@@ -11,10 +11,10 @@ authRouter.post('/registration', body('email').isEmail(), body('password').isLen
     max: 32
 }), AuthController.registration)
 authRouter.post('/login', AuthController.login)
-authRouter.post('/logout', AuthController.logout)
+authRouter.get('/logout', AuthController.logout)
 authRouter.get('/activate/:link', AuthController.activate)
 authRouter.get('/refresh', AuthController.refresh)
 authRouter.get('/me', AuthController.me)
-authRouter.post('/sendActivate', AuthController.sendActivate)
-authRouter.post('/changePassword', authMiddleware, AuthController.changePassword)
+authRouter.post('/send-activate', AuthController.sendActivate)
+authRouter.post('/change-password', authMiddleware, AuthController.changePassword)
 authRouter.delete('/delete/:id', authMiddleware, AuthController.delete)
